--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,13 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Examples and Tests
+*/example.c
+a.out.dSYM
+*.out
+*.a
+*.o
+*/core
+core
+*.rb
