--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "editor.insertSpaces": false,
   "files.associations": {
-    "exclude": "ignore",
-    "string.h": "c",
-    "stdio.h": "c",
-    "ctype.h": "c",
-    "unity.h": "c",
-    "libft.h": "c"
-  }
+	"exclude": "ignore",
+	"string.h": "c",
+	"stdio.h": "c",
+	"ctype.h": "c",
+	"unity.h": "c",
+	"libft.h": "c",
+	"__locale": "c"
+},
+"editor.detectIndentation": false
 }
