Finish char function tests.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: lpaulo-m <lpaulo-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/02/13 22:59:07 by lpaulo-m          #+#    #+#              #
-#    Updated: 2021/02/13 23:42:35 by lpaulo-m         ###   ########.fr        #
+#    Updated: 2021/02/14 00:02:29 by lpaulo-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,6 +20,7 @@ UNITY = Unity/unity.c
 LIBFT_PATH = ../libft
 LIBFT_NAME = libft.a
 
+TESTS = ft_isalnum.c ft_isdigit.c ft_isalpha.c ft_isascii.c ft_isprint.c
 TEST_MAIN = test.c
 EXECUTE_TESTS = time ./a.out
 TEST_GARBAGE = a.out
@@ -32,7 +33,7 @@ build_libft:
 re: fclean build_libft
 
 test: build_libft $(TEST_MAIN)
-	@$(CC) $(DEBUG_CC_FLAGS) $(UNITY) $(TEST_MAIN) $(LIBFT)
+	@$(CC) $(DEBUG_CC_FLAGS) $(UNITY) $(LIBFT) $(TESTS) $(TEST_MAIN)
 	@$(EXECUTE_TESTS)
 
 fclean:
