--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
 	"ctype.h": "c",
 	"unity.h": "c",
 	"libft.h": "c",
-	"__locale": "c"
+	"__locale": "c",
+	"test.h": "c"
 },
 "editor.detectIndentation": false
 }
