--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Runs norminette linter
         run: |
           # Runs norminette with every .c or .h file on the root dir and its subdirectiores
-          find . -type f \( -name \*.c -o -name \*.h \) -exec sh -c 'linter/norminette.rb {}' \; | tee output
+          find . -type f \( -name libft\*.c -o -name libft\*.h \) -exec sh -c 'linter/norminette.rb {}' \; | tee output
           echo "NORM_ERRORS=$(grep -E 'Error|Warning' output | wc -l)" >> $GITHUB_ENV
       - name: Checks norminette linter result
         run: |
