--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: lpaulo-m <lpaulo-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/02/13 22:59:07 by lpaulo-m          #+#    #+#              #
-#    Updated: 2021/02/14 01:32:03 by lpaulo-m         ###   ########.fr        #
+#    Updated: 2021/03/25 03:19:36 by lpaulo-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,14 +20,18 @@ UNITY = Unity/unity.c
 LIBFT_PATH = ../libft
 LIBFT_NAME = libft.a
 
-TESTS = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
-	ft_memchr.c ft_memcmp.c ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strchr.c \
-	ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c ft_isalpha.c ft_isdigit.c \
-	ft_isalnum.c ft_isprint.c ft_isascii.c ft_toupper.c ft_tolower.c ft_calloc.c \
-	ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
-	ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
-	ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+TESTS = test_ft_memset.c test_ft_bzero.c test_ft_memcpy.c test_ft_memccpy.c \
+	test_ft_memmove.c test_ft_memchr.c test_ft_memcmp.c test_ft_strlen.c \
+	test_ft_strlcpy.c test_ft_strlcat.c test_ft_strchr.c test_ft_strrchr.c \
+	test_ft_strnstr.c test_ft_strncmp.c test_ft_atoi.c test_ft_isalpha.c \
+	test_ft_isdigit.c test_ft_isalnum.c test_ft_isprint.c test_ft_isascii.c \
+	test_ft_toupper.c test_ft_tolower.c test_ft_calloc.c test_ft_strdup.c \
+	test_ft_substr.c test_ft_strjoin.c test_ft_strtrim.c test_ft_split.c \
+	test_ft_itoa.c test_ft_strmapi.c test_ft_putchar_fd.c test_ft_putstr_fd.c \
+	test_ft_putendl_fd.c test_ft_putnbr_fd.c test_ft_lstnew.c \
+	test_ft_lstadd_front.c test_ft_lstsize.c test_ft_lstlast.c \
+	test_ft_lstadd_back.c test_ft_lstdelone.c test_ft_lstclear.c \
+	test_ft_lstiter.c test_ft_lstmap.c
 TEST_MAIN = test.c
 EXECUTE_TESTS = time ./a.out
 TEST_GARBAGE = a.out
@@ -35,7 +39,7 @@ TEST_GARBAGE = a.out
 LIBFT = $(LIBFT_PATH)/$(LIBFT_NAME)
 
 build_libft:
-	@$(LIBFT_MAKE) all bonus
+	@$(LIBFT_MAKE) all
 
 re: fclean build_libft
 
