--- a/.github/workflows/norminette.yml
+++ b/.github/workflows/norminette.yml
@@ -30,6 +30,7 @@ jobs:
           echo "NORM_ERRORS=$(grep -E 'Error|Warning' output | wc -l)" >> $GITHUB_ENV
           find ./sources -type f \( -name \*.c -o -name \*.h \) -exec sh -c 'linter/norminette.rb {}' \; | tee output
           echo "NORM_ERRORS=$(grep -E 'Error|Warning' output | wc -l)" >> $GITHUB_ENV
+      - name: Checks norminette linter result
         run: |
           echo "Norminette errors found: $NORM_ERRORS"
           [[ $NORM_ERRORS == 0 ]]
