--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,19 @@
 {
-  "editor.insertSpaces": false,
   "files.associations": {
-	"exclude": "ignore",
-	"string.h": "c",
-	"stdio.h": "c",
-	"ctype.h": "c",
-	"unity.h": "c",
-	"libft.h": "c",
-	"__locale": "c",
-	"test.h": "c"
-},
-"editor.detectIndentation": false
+    "exclude": "ignore",
+    "string.h": "c",
+    "stdio.h": "c",
+    "ctype.h": "c",
+    "unity.h": "c",
+    "libft.h": "c",
+    "__locale": "c",
+    "test.h": "c"
+  },
+
+  "editor.tabSize": 4,
+  "editor.insertSpaces": false,
+  "editor.renderWhitespace": "all",
+  "files.trimTrailingWhitespace": true,
+  "files.insertFinalNewline": true,
+  "editor.detectIndentation": true
 }
