Fix build issues.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: lpaulo-m <lpaulo-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/02/13 22:59:07 by lpaulo-m          #+#    #+#              #
-#    Updated: 2021/03/25 21:34:17 by lpaulo-m         ###   ########.fr        #
+#    Updated: 2022/02/13 15:30:04 by lpaulo-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,6 +14,7 @@ NAME = tests.a
 
 CC = gcc
 CC_DEBUG_FLAGS = -g
+CC_INCLUDES = -I $(LIBFT_INCLUDES) -I $(INCLUDES_PATH)
 
 MAKE_EXTERNAL = make -C
 SAFE_MAKEDIR = mkdir -p
@@ -24,10 +25,11 @@ REMOVE_RECURSIVE = /bin/rm -rf
 
 OBJECTS_PATH = ./objects
 SOURCES_PATH = ./sources
-INCLUDES_PATH = ../includes
-LIBS_PATH = ../libs
+INCLUDES_PATH = ./includes
+LIBS_PATH = ./libs
 
 LIBFT_PATH = ..
+LIBFT_INCLUDES = $(LIBFT_PATH)/includes
 LIBFT = $(LIBFT_PATH)/libft.a
 
 UNITY = $(LIBS_PATH)/Unity/unity.c
@@ -55,7 +57,7 @@ TEST_GARBAGE = a.out
 all: test
 
 test: build_libft $(NAME)
-	$(CC) $(CC_DEBUG_FLAGS) -I $(INCLUDES_PATH) $(TEST_MAIN) $(NAME) $(UNITY) $(LIBFT)
+	$(CC) $(CC_DEBUG_FLAGS) $(CC_INCLUDES) $(TEST_MAIN) $(NAME) $(UNITY) $(LIBFT)
 	$(EXECUTE_TESTS)
 
 $(NAME): $(OBJECTS)
@@ -63,7 +65,7 @@ $(NAME): $(OBJECTS)
 
 $(OBJECTS_PATH)/%.o: $(SOURCES_PATH)/%.c
 	$(SAFE_MAKEDIR) $(OBJECTS_PATH)
-	$(CC) $(CC_DEBUG_FLAGS) -I $(INCLUDES_PATH) -o $@ -c $<
+	$(CC) $(CC_DEBUG_FLAGS) $(CC_INCLUDES) -o $@ -c $<
 
 build_libft:
 	$(MAKE_EXTERNAL) $(LIBFT_PATH)
@@ -74,7 +76,6 @@ clean:
 fclean: clean
 	@$(REMOVE) $(NAME)
 	@$(REMOVE) $(TEST_GARBAGE)
-	@$(MAKE_EXTERNAL) $(LIBFT_PATH) fclean
 
 re: fclean all
 
