--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "limits.h": "c",
     "stdlib.h": "c",
     "resource.h": "c",
-    "libft.h": "c"
+    "libft.h": "c",
+    "ft_count_digits_dc": "c"
   }
 }
