--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
     "stdlib.h": "c",
     "resource.h": "c",
     "libft.h": "c",
-    "ft_count_digits_dc": "c"
+    "ft_count_digits_dc": "c",
+    "cmath": "c",
+    "*.tcc": "c"
   }
 }
